--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<meta property="og:url" content="https://knowlesc.github.io/LinkUnfurlingTest/"/>
-<meta property="og:title" content="Test Title"/>
-<meta property="og:description" content="Test description"/>
-<meta property="og:site_name" content="Test Site Name"/>
-<meta property="og:image" content="http://i0.kym-cdn.com/entries/icons/mobile/000/005/608/nyan-cat-01-625x450.jpg"/>
+<html>
+  <head>
+    <meta property="og:url" content="https://knowlesc.github.io/LinkUnfurlingTest/"/>
+    <meta property="og:title" content="Test Title"/>
+    <meta property="og:description" content="Test description"/>
+    <meta property="og:site_name" content="Test Site Name"/>
+    <meta property="og:image" content="http://i0.kym-cdn.com/entries/icons/mobile/000/005/608/nyan-cat-01-625x450.jpg"/>
+  </head>
+  <body>
+    Hello
+  </body>
+</html>
