--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <meta property="og:url" content="https://knowlesc.github.io/LinkUnfurlingTest/"/>
-    <meta property="og:title" content="Test Title"/>
-    <meta property="og:description" content="Test description"/>
-    <meta property="og:site_name" content="Test Site Name"/>
+    <meta property="og:title" content="Isn't it cool"/>
+    <meta property="og:description" content="It was super easy"/>
+    <meta property="og:site_name" content="Look at this"/>
     <meta property="og:image" content="http://i0.kym-cdn.com/entries/icons/mobile/000/005/608/nyan-cat-01-625x450.jpg"/>
   </head>
   <body>
